crates/alder-solve/tests/snapshots/inference__compose_lambdas.snap
---
source: crates/alder-solve/tests/inference.rs
description: "Code:\n\nmodule Main exposing (compose)\n\ncompose f g = \\x -> g (f x)\n"
---
compose : forall a b c. (a -> b) -> (b -> c) -> a -> c
