crates/alder-solve/tests/snapshots/inference__constructor_call_arity_is_checked.snap
---
source: crates/alder-solve/tests/inference.rs
description: "enum Maybe[a] { Just(a) }\nfn invalid() { Maybe::Just(1, 2) }"
---
[
    Error {
        region: Region {
            start: Position {
                line: 2,
                column: 16,
            },
            end: Position {
                line: 2,
                column: 33,
            },
        },
        kind: Mismatch {
            actual: Function(
                [
                    Named(
                        "Number",
                    ),
                    Named(
                        "Number",
                    ),
                ],
                Variable(
                    0,
                ),
            ),
            expected: Function(
                [
                    Named(
                        "Number",
                    ),
                ],
                Application(
                    Named(
                        "Maybe",
                    ),
                    [
                        Named(
                            "Number",
                        ),
                    ],
                ),
            ),
        },
    },
]
