crates/alder-solve/tests/snapshots/inference__error_tag_cannot_be_bound_as_an_ordinary_value.snap
---
source: crates/alder-solve/tests/inference.rs
description: "fn invalid() {\n    let failure = :not_found(42)\n    failure\n}\n"
---
[
    Error {
        region: Region {
            start: Position {
                line: 2,
                column: 19,
            },
            end: Position {
                line: 2,
                column: 33,
            },
        },
        kind: InvalidErrorTagPlacement,
        expectation: None,
    },
]
