crates/alder-solve/tests/snapshots/inference__explicit_async_block_return_does_not_constrain_outer_function.snap
---
source: crates/alder-solve/tests/inference.rs
description: "fn answer() String {\n    let task = async { return 42 }\n    \"outer\"\n}\n"
---
answer: fn() String
