crates/alder-solve/tests/snapshots/inference__explicit_async_does_not_flatten_task_annotation.snap
---
source: crates/alder-solve/tests/inference.rs
description: "async fn nested() Task[Number] { async { 42 } }"
---
nested: fn() Task[Task[Number]]
