crates/alder-solve/tests/snapshots/inference__explicit_async_extern_has_task_result.snap
---
source: crates/alder-solve/tests/inference.rs
description: "#[extern(\"./client.js\", \"answer\")]\nasync fn answer() Number\nfn start() Task[Number] { answer() }\n"
---
answer: fn() Task[Number]
start: fn() Task[Number]
