crates/alder-solve/tests/snapshots/inference__explicit_async_infers_completed_value.snap
---
source: crates/alder-solve/tests/inference.rs
description: "#[extern(\"alder:kernel\", \"$taskSleep\")]\nfn sleep(milliseconds: Number) Task[()]\n\nasync fn wait() {\n    sleep(1).await\n}\n"
---
sleep: fn(Number) Task[()]
wait: fn() Task[()]
