crates/alder-solve/tests/snapshots/inference__explicit_async_lambda_annotation_is_actual_task_type.snap
---
source: crates/alder-solve/tests/inference.rs
description: "let worker = (x: Number) Task[Number] -> async { x }"
---
worker: fn(Number) Task[Number]
