crates/alder-solve/tests/snapshots/inference__explicit_async_nested_blocks_preserve_both_layers.snap
---
source: crates/alder-solve/tests/inference.rs
description: "fn nested() { async { async { 42 } } }"
---
nested: fn() Task[Task[Number]]
